WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59361
Fix strict OwnPtr violations in Render*.cpp
https://bugs.webkit.org/show_bug.cgi?id=59361
Summary
Fix strict OwnPtr violations in Render*.cpp
James Robinson
Reported
2011-04-25 15:42:25 PDT
Fix strict OwnPtr violations in Render*.cpp
Attachments
Patch
(11.74 KB, patch)
2011-04-25 15:43 PDT
,
James Robinson
abarth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2011-04-25 15:43:04 PDT
Created
attachment 90966
[details]
Patch
James Robinson
Comment 2
2011-04-25 15:43:26 PDT
RenderStyle.cpp still doesn't compile in strict mode with this patch, but that issue seems more involved.
Adam Barth
Comment 3
2011-04-25 15:44:28 PDT
Comment on
attachment 90966
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=90966&action=review
> Source/WebCore/rendering/RenderBlock.cpp:1092 > - OwnPtr<DelayedUpdateScrollInfoSet> infoSet(gDelayedUpdateScrollInfoSet); > + OwnPtr<DelayedUpdateScrollInfoSet> infoSet(adoptPtr(gDelayedUpdateScrollInfoSet));
Wah?
James Robinson
Comment 4
2011-04-25 15:54:20 PDT
Committed
r84815
: <
http://trac.webkit.org/changeset/84815
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug