Source/WebCore/rendering/RenderButton.cpp
@@ -95,7 +95,7 @@ void RenderButton::styleDidChange(StyleDifference diff, const RenderStyle* oldSt
 
     if (!m_default && theme()->isDefault(this)) {
         if (!m_timer)
-            m_timer.set(new Timer<RenderButton>(this, &RenderButton::timerFired));
+            m_timer = adoptPtr(new Timer<RenderButton>(this, &RenderButton::timerFired));
         m_timer->startRepeating(0.03);
         m_default = true;
     } else if (m_default && !theme()->isDefault(this)) {
